src/styles/global.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap');
@import url('https://fonts.cdnfonts.com/css/edo-sz');

:root {
    /* Color scheme generated on uicolors.app */
    --accent-50: #fff1f1;
    --accent-100: #ffe4e4;
    --accent-200: #fecdd0;
    --accent-300: #fa727d;
    --accent-400: #fa727d;
    --accent-500: #f34053;
    --accent-600: #e12340;
    --accent-700: #bd1332;
    --accent-800: #9e1330;
    --accent-900: #87142f;
    --accent-950: #4b0614;
    /* Dark Theme */
    --background: #0e0e11;
    --background-alt: #18181b;
    --border: #27272a;
    --text: #EEEBDD;
    --text-subtext: #EEEBDD80;
    --text-alt: #EEEEEE;
    --text-alt-subtext: #EEEEEE80;
    --alwaysdark-border: #27272a;
    --alwayswhite-text-alt: #EEEEEE;
    /* Light Theme */
    --light-background: #eeeeee;
    --light-background-alt: #fafafa;
    --light-text: #0e0e11;
    --light-text-subtext: #0e0e1180;
    --light-text-alt: #18181b;
    --light-text-alt-subtext: #18181b80;
    --light-border: #d4d4d8;
    /* Other stuff */
    --font-main: "Poppins", sans-serif;
    --font-code: "Fira Code", monospace;
    --font-edo: "Edo SZ";
    --shadow-default: #000000 0em 0em 0.5em;
    --shadow-subtle: #000000 0em 0em 0.25em;
    
}

@media screen and (prefers-color-scheme: light) {
    :root {
        --background: var(--light-background);
        --background-alt: var(--light-background-alt);
        --border: var(--light-border);
        --text: var(--light-text);
        --text-alt: var(--light-text-alt);
        --text-subtext: var(--light-text-subtext);
        --text-alt-subtext: var(--light-text-alt-subtext);
    }
}

html {
    background-color: var(--background);
    font-family: var(--font-main);
    color: var(--text);
    font-size: large;
    font-weight: 500;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    overflow-x: hidden;
}
body {
    padding: 2em;
    max-width: 40em;
}

@media screen and (max-width: 899px) {
    body {
        width: 95%;
        padding-left: 0;
        padding-right: 0;
        flex-wrap: wrap;
    }
}

a {
    color: var(--accent-600);
    text-decoration: underline 2px;
    text-underline-offset: 2px;
    text-decoration-color: #00000000;
}
a:hover {
    color: var(--accent-700);
    text-decoration-color: var(--accent-700);
    transition: color 0.25s, text-decoration-color 0.25s;
}

.navbar {
    font-size: large;
    gap: 1em;
}
.pfp {
    border-radius: 50%;
    width: 160px;
    height: 160px;
    box-shadow: var(--shadow-subtle);
}
.profile {
    color: var(--alwayswhite-text-alt);
    border-radius: 16px;
    box-shadow: var(--shadow-subtle);
    border: 1px solid var(--alwaysdark-border);
    padding-top: 1.25em;
    margin-bottom: 1em;
    max-width: 708px;
    background-image: url(../img/sites/banner.webp);
    align-items: center;
}
.profile-text {
    margin-top: 1em;
    margin-bottom: 1em;
    align-items: center;
    gap: 1em;
}
@media screen and (max-width: 899px) {
    .navbar {
        flex-wrap: wrap;
        justify-content: center;
    }
    .profile-text {
        flex-direction: column;
    }
}
@media screen and (max-width: 350px) {
    .profile-text {
        gap: 0.5em;
    }
}
.profile-text span {
    padding: 8px;
    background-color: #00000080;
    border-radius: 8px;
    box-shadow: var(--shadow-subtle);
}
.profile-text h2 {
    text-shadow: var(--shadow-default);
    margin: 0;
}

.accent, .accent-600 {
    color: var(--accent-600);
}
.accent-200 {
    color: var(--accent-200)
}
.accent-none {
    color: var(--text)
}
.emoji {
    width: 1.3em;
    height: 1.3em;
    vertical-align: middle;
}
.flexcol {
    display: flex;
    flex-direction: column;
}
.flexrow {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}
@media screen and (max-width: 899px) {
    .flexrow-mobile-override {
        flex-direction: column;
    }
}
.fa-discord {
    margin-left: -2px;
}
h2 {
    margin-bottom: 0em;
}
/* ko-fi icon */
.fa-ko-fi::before {
    content: "\f0f4";
    display: inline-block;
    font-size: 1.1em;
    line-height: 0.45em;
    margin: -0.45em 0 0 -0.2em;
    overflow-y: hidden;
    padding-top: 0.45em;
}
.fa-ko-fi::after {
    color: var(--background);
    content: "\f004";
    font-size: 50%;
    font-weight: 900;
    margin: 3px 0 0 -2em;
    position: absolute;
}
footer {
    gap: 0.25em;
}
footer div {
    gap: 1em;
}
hr {
    border: 1px solid var(--border);
}
@media screen and (max-width: 899px) {
    footer div {
        justify-content: center;
    }
}
.container {
    border-radius: 16px;
    width: 670px;
    padding: 1em;
    margin-bottom: 1em;
    border: 1px solid var(--border);
    background-color: var(--background-alt);
}

.container h2 {
    margin-top: 0;
}

@media screen and (max-width: 899px) {
    .container {
        width: auto;
        max-width: 670px;
    }
}
.lastp {
    margin-bottom: 0;
}

.nohover:hover {
    text-decoration-color: #00000000;
}

/*
    EVIL HACK!!! Checkboxes cannot be styled!!
    A good workaround is to hide them and create a ::before pseudo element as a replacement.
    whoever at apple decided that checkboxes shouldnt be styled can go fuck themselves
*/
input[type="checkbox"] {
    -webkit-appearance: none;
    appearance: none;
    /* For iOS < 15 to remove gradient background */
    background-color: #fff;
    /* Not removed via appearance */
    margin: 0;
    font: inherit;
    color: currentColor;
    width: 16px;
    height: 16px;
    background-color: var(--accent-600);
    border: 1px solid var(--border);
    border-radius: 4px;
    transform: translate(2px, 6px);
    display: grid;
    place-content: center;
}
input[type="checkbox"]::before {
    content: "";
    width: 0.5em;
    height: 0.5em;
    transform: scale(0);
    background-color: var(--alwayswhite-text-alt);
    box-shadow: inset 1em 1em var(--form-control-color);
    clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
}
input[type="checkbox"]:checked::before {
    transform: scale(1);
}
.task-list-item {
    display: flex;
    flex-direction: row;
    gap: 0.5em;
}

/* Hide scrollbar for Chrome, Safari and Opera */
:root::-webkit-scrollbar {
    display: none;
}
  
/* Hide scrollbar for IE, Edge and Firefox */
:root {
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;  /* Firefox */
}

/* 
    Site specific styles start here.
    It would probably be better to split these into their own files,
    but VSCode won't suggest them if they're not in the same file.
*/

/* Index */
.buttons {
    flex-wrap: wrap;
    gap: 0.25em;
}
.buttons-section {
    gap: 1em;
}
textarea {
    resize: none;
    background-color: var(--background-alt);
    border: none;
    border-radius: 4px;
    font-family: var(--font-code);
    font-style: normal;
    font-optical-sizing: auto;
    font-weight: 400;
    color: var(--text);
    width: 40em;
    font-size: 14;
    padding-top: 0px;
    padding-bottom: 0px;
    height: 34px;
    margin-left: 0.5em;
    overflow-y: hidden;
}
textarea::selection {
    background-color: var(--accent-400);
}
textarea:focus {
    outline: none;
}
.myButtonDiv {
    justify-content: start;
}
.buttons-my p {
    margin-top: 0;
}

/* Blog */
.blogPostTitle, .blogPostDescription, .blogPostDate {
    margin-top: 0px;
    margin-bottom: 0px;
}
.blogPostDescription {
    font-style: italic;
    font-weight: 300;
}
.blogPostHeader {
    gap: 0.25em;
}
.blogPostContent {
    font-weight: 300;
}
.blogPostContainer {
    padding-bottom: 0;
}
.blogPostDate {
    color: var(--accent-600);
}
.blogPostContent p img {
    display: block;
    margin: 0 auto 0 auto;
    height: auto;
    width: 100%;
}
.blogPostContent p sub {
    font-style: italic;
    font-size: medium;
    color: var(--text-subtext);
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: fit-content;
}

/* FFXIV */
.ffxiv-divplate {
    border-radius: 16px;
    width: 670px;
    padding: 1em;
    margin-bottom: 1em;
    display: grid;
}
@media screen and (max-width: 899px) {
    .ffxiv-divplate {
        width: auto;
        max-width: 670px;
    }
}
.ffxiv-advplate {
    object-fit: none;
    object-position: 0 0;
    height: 420px;
    width: 100%;
    max-width: 670px;
    border-radius: 12px;
    justify-self: center;
    box-shadow: var(--shadow-subtle);
}
@media screen and (max-width: 786px) {
    .ffxiv-advplate {
        max-width: 452px;
    }
}
.ffxiv-render {
    max-width: 264px;
    max-height: 360px;
    object-fit: fill;
    border-radius: 12px;
    border: 1px solid var(--border)
}
.ffxiv-characterinfo {
    gap: 1em;
}
.ffxiv-infopanel {
    gap: 0.5em;
}
.ffxiv-infopanel div p{
    margin: 0;
}
.bold {
    font-weight: 700;
}
.classjob {
    display: flex;
    justify-content: center;
    gap: 0.25em;
    background-color: var(--accent-900);
    padding: 0.25em;
    border: 1px solid var(--border);
    border-radius: 8px;
}
.ffxiv-jobicon {
    padding-top: 2px;
    width: 1.25em;
    height: 1.25em;
}
.ffxiv-jobs {
    gap: 0.25em;
}
.classjob span {
    color: var(--alwayswhite-text-alt);
}

/* Yakuza */
.yakuza-intro {
    font-family: var(--font-edo);
    color: var(--alwayswhite-text-alt);
    text-align: center;
}
.yakuza-intro span {
    text-shadow: black 0px 0px 4px, var(--shadow-subtle);
}
.yakuza-tierlist {
    width: 100%;
    height: 448px;
    object-fit: none;
    object-position: 0 0;
    border-radius: 16px;
    border: 1px solid var(--border);
    box-shadow: var(--shadow-subtle);
    margin-top: 0.5em;
}
.yakuza-checklist ul {
    list-style: none;
    padding-left: 0;
    margin-bottom: 0;
}
.yakuza-checklist li {
    margin-bottom: 0.25em;
}
.yakuza-checklist p {
    margin: 0;
}
.yakuza-checklist sub {
    font-style: italic;
    font-size: medium;
    color: var(--text-subtext);
    width: fit-content;
    vertical-align: baseline;
}
.yakuza-checklist li sub img {
    opacity: 50%;
}

/* Specs */
.specs-div {
    gap: 2em
}

